--- a/GRT/res/values/strings.xml
+++ b/GRT/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">GRT</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_display_message">MyMessage</string>
 
 </resources>
